# second-brain-mcp

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENT_PLAN.md  LICENSE  NEW_MACHINE_SETUP.md  README.md  REMOTE_SETUP.md  benchmark.py  execution_trace.md  figures.py  mcp_config.example.json  mcp_config.json  pyproject.toml  requirements.txt  run_sleep.py  run_vault_sleep.sh  server.json  server.py  start-remote.sh  vault_db.py  vault_janitor.py  vault_sleep.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/launchd/: com.yourname.llama-embed.plist  com.yourname.vault-sleep.plist
launchd/: com.user.second-brain-remote.plist.template  com.user.vault-janitor.plist.template  com.user.vault-sleep.plist.template  install.sh  run_sleep.py
mcp_second_brain/: __init__.py  __main__.py  figures.py  server.py  vault_janitor.py  vault_sleep.py
mcp_second_brain/templates/: mcp-project-template.md  project-template.md  research-note-template.md
templates/: agents-template.md  decision-template.md  note-template.md  setup-template.md
tests/: test_figures.py  test_server.py  test_vault_db.py  test_vault_sleep.py
