[project]
name = "second-brain"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "markitdown[all]>=0.1.0",
    "duckdb>=1.1.0",
    "playwright>=1.40.0",
    "markdown2>=2.4.0",
    "requests>=2.31.0",
    "anthropic>=0.40.0",
    "ollama>=0.6.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
