[project]
name = "mcp-second-brain"
version = "0.1.0"
description = "Self-maintaining personal knowledge database — MCP server with figure-level search, auto-wikilinks, and Ebbinghaus-based memory compression"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "knowledge-base", "second-brain", "llm", "obsidian", "duckdb", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "markitdown[all]>=0.1.0",
    "duckdb>=1.1.0",
    "playwright>=1.40.0",
    "markdown2>=2.4.0",
    "requests>=2.31.0",
    "anthropic>=0.40.0",
    "ollama>=0.6.2",
]

[project.urls]
Homepage = "https://github.com/ddmanyes/second-brain-mcp"
Repository = "https://github.com/ddmanyes/second-brain-mcp"
"Bug Tracker" = "https://github.com/ddmanyes/second-brain-mcp/issues"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py", "vault_db.py", "vault_sleep.py", "figures.py", "templates/*.md"]
